# Stribog

./: .gitignore  README.md  compose.build.yaml  compose.dev.yaml  migrations.txt
axum/: .dockerignore  .env.example  Cargo.toml  Dockerfile  Dockerfile.dev
axum/.sqlx/: query-0d0bf1e80fe5d97aadfa97beb2a5a4d6cf56d49cdbeccdb66e7f064f962897c1.json  query-20af434921fb47e685a3103d1a21e914bcd1b5c04808869af36e5c8d11ebab8a.json  query-29fd7e4e8c08484ed643bf00ceacf95831d403bd30fbd5b904edf3dcb8c17bf7.json  query-2f8064cb78f4c4b1f0d4eab880bab8d57d892aaef3fcfbf13e22e767813dac55.json  query-32cd8083516383227912cefa989e0ef34eb64e6d3f84d518da741ac161700b54.json  query-44378595bf36307f202daeabe4261b508b9798887dbaf179fa7c3e0491fcf58a.json  query-51f70f12c35de5a01e1c1b41db61892ee082d64f3c6af3d15bfd5850299fdb3b.json  query-559826a05020805b4c0a09de9429c11a5beeebe3e775ee3a750eb33c4c37f365.json  query-56e26492559a8ab6ab466e1568895b3961f059e926ebe17e4b19031af5a057ae.json  query-63bd3e5a26b765fc169b314a69b1fb6fb493c32427e6e2cf08d9c07e8fea8069.json  query-694c8eabeb6d11ef3ff1f691bd15bb119068de6bba49982ee3d35b32136a6bea.json  query-6cf69b2dfb610bad70fb8e6810dea63795363dd17730130c1efaee0cf6c139ff.json  query-6fc9a0ee83ec6740ebda40dae0e7de2b7b1d500079adcc9ddcb700faefc9c2e5.json  query-6fee64fa2d3af175dbf7ae1f3dcb57a65f965befe06b3c9c1e3bb69886520e83.json  query-7747f64cc8dbded4611eb9581833fabc33214488d79844d6f46244d9d9552aee.json  query-80641aee0bfb6ab52c35b5c12851f15946a222e099ddb41417d686a341797459.json  query-8716d5fdf2559e1a157f32a6c7046a91fe93215af49cd89c9bf024f51d688896.json  (+15 more)
go/: .air.toml  (+5 more)
(+215 files in other folders)
